# xrs

./: .editorconfig  .rustfmt.toml  Cargo.toml  README.md
.trunk/: trunk.yaml
src/: client.rs  connection.rs  lib.rs  stream.rs
src/client/: rw.rs
src/events/: init_connection.rs  mod.rs
xrs/: Cargo.toml
xrs/src/: connection.rs  lib.rs
xrs/src/events/: init_connection.rs  mod.rs
